<resources>
    <string name="app_name">TwoActivities</string>
    <string name="main_button">SEND</string>
    <string name="text_header_message">Message Received</string>
    <string name="main_editText_message">Enter Your Message Here</string>
    <string name="reply_button">Reply</string>
    <string name="text_reply_message">Enter Your Reply Here</string>
    <string name="text_reply_header_message">Message Reply</string>
</resources>
